--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router": "^6.11.1",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "reactstrap": "^9.1.9",
     "recoil": "^0.7.7",
     "web-vitals": "^2.1.4"
   },
