--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "firebase": "^9.21.0",
+    "json-server": "^0.17.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
